# dresses

./: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile.dyn~  Makefile~  _Makefile  config-dyn.js  config.js  config.js~  content.h~  contents.tmpl~  datasession.cpp  datasession.h  dresses.cpp  dresses.cpp~  dresses.db  dresses.h  dresses.h~  dresses.kdev4  dresses.kdev4~  menu.txt~  tmplMain.tmpl~
apps/: details.cpp  details.h  list.cpp  list.h  master.cpp  master.h
apps/user/: editdetails.cpp  editdetails.h  profile.cpp  profile.h  user.cpp  user.h  (+4 more)
css/: details.css  dresses.css  dresses.css~  editdetails.css  list.css  main.css  menu.css~  mooupload.css  moowatermark.css  products.css  profile.css
data/: data.h  details.h  list.h  master.h  profile.h
js/: dresses.js  editdetails.js  moowatermark.js  tree-acordion.js~
model/: category.cpp  category.h  category.h~  characteristic.cpp  characteristic.h  characteristiccategory.cpp  characteristiccategory.h  client.cpp  client.h  collection.cpp  collection.h  collection.h~  company.cpp  company.h  defines.h  defines.h~  dress.cpp~  dress.h~  featuredproduct.cpp  featuredproduct.h  image.cpp  image.h  image.h~  ownerproduct.cpp  ownerproduct.h  payment.cpp  payment.h  product.cpp  product.cpp~  product.h  productcharacteristic.cpp  productcharacteristic.h  sale.cpp  sale.h  saledetail.cpp  saledetail.h  shop.cpp  shop.h  specialoffer.cpp  specialoffer.h  (+3 more)
pages/: basepage.cpp  basepage.cpp~  basepage.h  basepage.h~  productpage.cpp  productpage.h  productpage.h~
services/: baseservice.cpp~  baseservice.h  productsservice.cpp~  productsservice.h  productsservice.h~
site/: details.html  dresses.html  list.html
templates/: admin.cpp  admin.h~  admin.tmpl  admin.tmpl~  content.h~  content.tmpl~  content1.cpp  content1.h  content1.h~  content1.tmpl  content1.tmpl~  content2.cpp  content2.cpp~  content2.h  content2.h~  content2.tmpl~
utils/: dispatcher.h~  formgenerator.cpp  formgenerator.h  formgenerator.h~  jsonutils.cpp  jsonutils.cpp~  jsonutils.h~
view/: details.tmpl  list.tmpl  master.tmpl  view.cpp
(+20 files in other folders)
